# soc-env

./: .gitignore  COMPREHENSIVE_PRD.md  Dockerfile  README.md  SOC_Env_Master_Training.ipynb  SOC_OpenEnv_PRD.md  colab_train.ipynb  demo_agent.py  dockerfile  inference.py  openenv.yaml  pyproject.toml  requirements.txt  reset_1.json  reset_2.json  reset_test.json  soc_openenv.py  train_grpo.ipynb  train_rl.py  walkthrough.md
SCALAR/: pyvenv.cfg
SCALAR/Scripts/: activate  activate.bat
server/: app.py  environment.py  grader.py  main.py  models.py  scenario_loader.py
server/scenarios/: task_1.json  task_2.json  task_3.json  task_4.json
