[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-env"
version = "1.0.0"
description = "SOC-Env: Security Operations Center Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "openai",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
